--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
             <ul class="header__menu">
                <li>
                   <div class="header__item">
-                     <a href="" class="header__name">menu</a>
+                     <a href="#" class="header__name">menu</a>
                      <p class="header__discription">Sit amet constetur adipisicing elit. Fugit perspiciatis.</p>
                   </div>
                </li>
                <li>
                   <div class="header__item">
-                     <a href="" class="header__name">about</a>
+                     <a href="#about" class="header__name">about</a>
                      <p class="header__discription">Adipisicing elit. Fugit pipsam ratione numquam</p>
                   </div>
                </li>
                 <li>
                   <div class="header__item">
-                     <a href="" class="header__name">Events</a>
+                     <a href="#events" class="header__name">Events</a>
                      <p class="header__discription">Ratione numquam lorem ipsum dolor sit amet tetur.</p>
                   </div>
                </li>
                 <li>
                   <div class="header__item">
-                     <a href="" class="header__name">Reservations</a>
+                     <a href="#reservation" class="header__name">Reservations</a>
                      <p class="header__discription">Voluptates animi cupiditate similique sint.</p>
                   </div>
                </li>
                 <li>
                   <div class="header__item">
-                     <a href="" class="header__name header__name_red">Contact</a>
+                     <a href="#contact" class="header__name header__name_red">Contact</a>
                      <p class="header__discription">Quis nemo odio saepe ullam vitae officiis delectus.</p>
                   </div>
                </li>
@@ -187,7 +187,7 @@
       </div>
    </div>
    <footer>
-      <div class="footer__wrap box">
+      <div class="footer__wrap box" id="contact">
          <div class="footer__logo">Voilà</div>
          <nav>
             <div class="footer__name">navigation</div>
