--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
             <div class="footer__name">navigation</div>
             <ul>
                <li><a href="">Menu</a></li>
-               <li><a href="">about</a></li>
-               <li><a href="">events</a></li>
-               <li><a href="">reservations</a></li>
-               <li><a href="">contact</a></li>
+               <li><a href="#about">about</a></li>
+               <li><a href="#events">events</a></li>
+               <li><a href="#reservation">reservations</a></li>
+               <li><a href="#contact">contact</a></li>
             </ul>
          </nav>
          <div class="footer__right">
